Improved dynamically overlaping with click and drag, improved behavior of buttons and fixed bug with text.

--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -163,13 +163,13 @@ p {
     min-width: 120px;
     min-height: 50px;
     padding: 0% 3% 0% 3%;
-    cursor:pointer;
 }
 
 #AboutMe .description .showing_button img:hover{
     background: darkgrey;
     border: 1px solid darkgrey;
     border-radius: 4px;
+    cursor:pointer;
 }
 
 #AboutMe .description .showing_button #text_button {
@@ -177,13 +177,10 @@ p {
 }
 
 #AboutMe .description .switching_content{
-    border-radius: 25px;
     min-height: 300px;
     min-width: 800px;
-    border: 2px solid #73AD21;
     position: relative;
-    background: yellow;
-    padding: 5% 1% 5% 1%;
+    padding: 3% 1% 3% 1%;
 }
 
 #AboutMe .description .switching_content #divider{
@@ -192,8 +189,13 @@ p {
     border: 2px;
     border-radius: 25px;
     right:0px;
-    background: blue;
+    background: #52733B;;
     overflow: hidden;
+}
+
+#AboutMe .description .switching_content #divider:hover{
+    background: #283717;
+    cursor:pointer;
 }
 
 #AboutMe .description .switching_content #right_graph{
